# wanted-engine

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .trivyignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Justfile  Kconfig  Kconfig.engine  Kconfig.target  LICENSE  Makefile  NOTICE  README.md  compile_commands.json  main.c  my_api.h  my_wasi.c  run-docker.sh  run-podman.sh
.devcontainer/: devcontainer.json
cmake/: CodeCoverage.cmake  Kconfig.cmake  VersionFromGit.cmake  toolchain-nuttx-sim.cmake  toolchain-openwrt.cmake
cmd/: CMakeLists.txt  main.c
configs/: beryl_openwrt_defconfig  big_defconfig  bringup-esp32s3.json  bringup-rp2350-serial.json  bringup-rp2350-wifi.json  bringup-rp2350-wsh.json  constrained_defconfig  esp32-nuttx_defconfig  example_config.json  example_config_wsh.json  openwrt.json  openwrt_defconfig  pimoroni_pico2_plus_w_defconfig  psram-s3-storage_defconfig  psram-s3_defconfig  rp2350_feather_defconfig  sheriff-deputy.json  sheriff.json  small_defconfig  tiny_defconfig  xiao_esp32s3-storage_defconfig  xiao_esp32s3_defconfig
docker/: Dockerfile  (+9 more)
platform/: CMakeLists.txt  README.md
platform/dummy/: CMakeLists.txt  dummy-crypto.c  dummy-extram.c  dummy-fs.c  dummy-fs.h  dummy-gpio.c  dummy-net.c  dummy-ota.c  dummy-registry.c  dummy-wapps.c  dummy-wifi.c  dummy.c
platform/esp-idf/: CMakeLists.txt  README.md  clock-sleep.c  extram.c  fs-volume.c  memory.c  ota.c  partition_table.csv  platform.c  random.c  registry-seed.sh  registry.c  registry_flash.c  sdkconfig.defaults  sha256.c  ssocket.c  wapps.c
platform/esp-idf/components/c9/: CMakeLists.txt  c9
platform/esp-idf/components/cwalk/: CMakeLists.txt  cwalk
platform/esp-idf/components/json-maker/: CMakeLists.txt  src
platform/esp-idf/components/platform/: CMakeLists.txt  dummy.c  wanted
platform/esp-idf/components/platform/api/: wapps.c
platform/esp-idf/components/platform/vfs/: vfs-esp.c
platform/esp-idf/components/romfs-lib/: CMakeLists.txt  romfs
platform/esp-idf/components/tiny-json/: CMakeLists.txt  src
platform/esp-idf/components/wanted-lib/: CMakeLists.txt  supervisor
platform/esp-idf/components/wanted_engine/: CMakeLists.txt  Kconfig
platform/esp-idf/components/wasm3/: CMakeLists.txt  wasm3
platform/esp-idf/include/: config-esp-idf.h  registry-image.h
platform/esp-idf/m0-coexistence/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.baseline  sdkconfig.defaults.mitigated
platform/esp-idf/m0-coexistence/main/: CMakeLists.txt  coexist_main.c
platform/esp-idf/m3pre-psram-stacks/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.baseline  sdkconfig.defaults.mitigated
platform/esp-idf/m3pre-psram-stacks/main/: CMakeLists.txt  stacks_main.c
platform/esp-idf/main/: CMakeLists.txt  m3_api_esp_wasi.c  m3_api_esp_wasi.h  main.c  wasi_test.wasm.h
platform/esp-idf/ota-profiles/: s3-storage.cmake  s3-wapps.cmake
platform/esp-idf/project/: .gitignore  CMakeLists.txt  partitions.csv  partitions.csv.in  sdkconfig.defaults
platform/esp-idf/project/main/: CMakeLists.txt  app_main.c
platform/esp-idf/vfs/: vfs-esp-idf.c  vfs-ota.c  vfs-wifi.c
platform/esp32-idf/: CMakeLists.txt
platform/esp32-idf/main/: wasm3
platform/include/: clock-posix.h  platform-config.h  platform.h  vfs-posix.h
platform/linux/: CMakeLists.txt
platform/linux/api/: clock-sleep.c  clock.c  crypto.c  extram.c  fs-volume.c  fs.c  mutex.c  ota.c  random.c  registry.c  socket.c  ssocket.c  vfs.c  wapps.c
platform/linux/include/: config-linux.h  network.h  vfs-linux.h
platform/linux/vfs/: vfs-gpio.c  vfs-linux.c  vfs-wifi.c
platform/nuttx/: CMakeLists.txt  README.md  wanted_main.c
platform/nuttx/api/: clock-sleep.c  clock.c  crypto.c  extram.c  fs-volume.c  fs.c  memory.c  mutex.c  random.c  registry.c  socket.c  wapps.c
platform/nuttx/app/: wanted_esp32_main.c  wanted_rp2350_main.c  wanted_sim_main.c
platform/nuttx/include/: config-nuttx.h  wapp-stop.h
platform/nuttx/vfs/: vfs-gpio.c  vfs-nuttx.c  vfs-wifi.c
platform/posix/: clock.c  fs.c  mutex.c  registry-store.c  sha256.c  socket.c  ssocket-mbedtls.c  wapps-image.c
src/: CMakeLists.txt  README.md  default_supervisor_cfg.json.h  extra-drivers-none.c  log-store.c  main.c  my_api.c  my_api.h  my_wasi.h  romfs_malloc.c  wanted-internal.h  wanted-vfs-api.c  wanted.c  wanted_malloc.c  wanted_wasm_api.c
src/fs/: romfs-internal.c  romfs-internal.h  romfs.c
src/include/: debug_trace.h  drivers.h  log-store.h  vfs-devfs.h  vfs-drivers.h  vfs-netfs.h  vfs-pipe.h  vfs-procfs.h  vfs-stdio.h  vfs-tarfs.h  vfs.h  wanted-api.h  wanted-config.h  wanted-host-guard.h  wanted-vfs-api.h  wanted_log.h  wanted_malloc.h  wanted_wasm_api.h  wasi.h
src/vfs/: drivers.c  vfs-9p.c  vfs-config.c  vfs-devfs.c  vfs-dummy.c  vfs-ed25519.c  vfs-inflate.c  vfs-internal.h  vfs-linux.c  vfs-log.c  vfs-logmount.c  vfs-netfs.c  vfs-null.c  vfs-pipe.c  vfs-procfs-wapps.c  vfs-procfs.c  vfs-romfs.c  vfs-sha256.c  vfs-socket.c  vfs-stdio.c  vfs-tarfs.c  vfs-virt.c  vfs-virtual.c  vfs-virtual.h  vfs-wanted-config.c  vfs-wanted-ctrl.c  vfs-wanted-registry.c  vfs-wanted-wapps.c  vfs-wanted.c  vfs.c
src/wasi/: wasi-linux.c  wasi-romfs.c  wasi-romfs.c.old  wasi-vfs.c  wasi_types.h
test/: CMakeLists.txt  ctrl-action.json.h  devcheck-config.json  devcheck.sh  esp32-drive.py  external_symbols.h  generate_runner.sh  lib-junit.sh  lib-wapp.sh  live-update-config.json  live-update.sh  memcap.sh  nuttx-sim-config.json  nuttx-sim.sh  rp2350-sign-verify.sh  run-integration.sh  run-one-junit.sh  selftest-config.json  selftest-qemu.sh  selftest.sh  smoke-engine-config.json  smoke-engine.sh  smoke-multiwapp.sh  smoke-pipe.sh  smoke.sh  stage-malformed.sh  syscontrol.sh  test-api.c  test-driver-tables.c  test-kconfig.c  test-logmount.c  test-pipe.c  test-platform-clock.c  test-platform-registry.c  test-procfs-wapps.c  test-procfs.c  test-tarfs.c  test-utils.c  test-utils.h  test-vendor-ed25519.c  (+23 more)
test/extra-drivers/: CMakeLists.txt  fixture-drivers.c
test/test_runners/: runner.c
(+115 files in other folders)
